kubernetes/catalog/homarr/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/managed-by: infraweaver
    app.kubernetes.io/name: homarr
    infraweaver.io/source: community-apps
    infraweaver.io/tier: simple
  name: homarr
  namespace: homarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: homarr
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: homarr
    spec:
      containers:
      - env:
        - name: SECRET_ENCRYPTION_KEY
          valueFrom:
            secretKeyRef:
              key: value
              name: secret-encryption-key-secret
        - name: AUTH_PROVIDERS
          value: credentials
        - name: AUTH_LOGOUT_REDIRECT_URL
          value: ''
        - name: AUTH_SESSION_EXPIRY_TIME
          value: 30d
        - name: DB_DRIVER
          value: better-sqlite3
        - name: DB_DIALECT
          value: sqlite
        - name: DB_NAME
          value: ''
        - name: DB_MIGRATIONS_DISABLED
          value: 'false'
        - name: PUID
          value: ''
        - name: PGID
          value: ''
        image: ghcr.io/homarr-labs/homarr:latest
        livenessProbe:
          failureThreshold: 10
          initialDelaySeconds: 30
          tcpSocket:
            port: 7575
        name: homarr
        ports:
        - containerPort: 7575
          name: webui
          protocol: TCP
        readinessProbe:
          failureThreshold: 10
          initialDelaySeconds: 30
          tcpSocket:
            port: 7575
        resources:
          limits:
            cpu: 500m
            memory: 1Gi
          requests:
            cpu: 50m
            memory: 64Mi
        securityContext:
          allowPrivilegeEscalation: false
          runAsNonRoot: false
        volumeMounts:
        - mountPath: /appdata
          name: homarr-data-0
        - mountPath: /var/run/docker.sock
          name: homarr-data-1
      volumes:
      - name: homarr-data-0
        persistentVolumeClaim:
          claimName: homarr-data-0
      - name: homarr-data-1
        persistentVolumeClaim:
          claimName: homarr-data-1
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: homarr
    infraweaver.io/source: community-apps
  name: homarr
  namespace: homarr
spec:
  ports:
  - name: webui
    port: 7575
    protocol: TCP
    targetPort: 7575
  selector:
    app.kubernetes.io/name: homarr
  type: ClusterIP
