kubernetes/catalog/homarr/manifests/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: homarr
  namespace: homarr
  labels:
    app.kubernetes.io/name: homarr
    infraweaver.io/source: community-apps
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`homarr.int.rlservers.com`)
      kind: Rule
      middlewares:
        - name: netbird-vpn-only
          namespace: traefik
      services:
        - name: homarr
          port: 7575
  tls:
    secretName: int-rlservers-com-tls
